# forecasting-tools-fork

./: .cursorrules  .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  README.ipynb  README.md  _typos.toml  conftest.py  pyproject.toml  pytest.ini  tournament_example.py
.devcontainer/: Dockerfile  devcontainer.json  postinstall.sh
.github/workflows/: benchmark-template.yaml  hourly-run-main.yaml  hourly-run-template.yaml  pre-commit.yaml  unit-tests.yaml
code_tests/expensive_run_tests_individually/: test_ex_base_rate_responder.py  test_ex_key_factors.py  test_ex_niche_list_researcher.py  test_ex_smart_searcher.py
code_tests/expensive_tests__run_individually/: test_ex_base_rate_responder.py  test_ex_key_factors.py  test_ex_niche_list_researcher.py  test_ex_question_responders.py  test_ex_smart_searcher.py
code_tests/low_cost_or_live_api_tests/: test_base_rate_responder.py  test_benchmarker.py  test_deduplicator.py  test_forecast_database_manager.py  test_forecasting_bots.py  test_metaculus_api.py  test_smart_searcher.py
code_tests/low_cost_or_live_api_tests/test_ai_models/: test_ai_model_interface.py  test_exa_model.py  test_models_incurring_cost.py  test_models_tracking_token_cost.py
code_tests/unit_tests/test_ai_models/: ai_mock_manager.py  models_to_test.py  test_open_ai_utils.py  test_outputs_text.py  test_request_limited_models.py  test_retryable_models.py  test_time_limited_models.py  test_token_limited_models.py
code_tests/unit_tests/test_forecasting/: forecasting_test_manager.py  test_key_factors_searcher.py  test_template_bot.py
code_tests/unit_tests/test_frontend/: front_end_test_utils.py  test_benchmarks_page.py  test_home_page.py  test_report_displayer.py
code_tests/utilities_for_tests/: coroutine_testing.py  jsonable_assertations.py  misc_utils.py  proportion_calculator.py
forecasting_bots/: gemini_bots.py  johnathan_bot.py  my_custom_bot.py  run_johnathan_bot.py  standalone_template_bot.py
forecasting_tools/: __init__.py
forecasting_tools/ai_models/: README.md  claude35sonnet.py  exa_searcher.py  gemini2exp.py  gemini2flash.py  gemini2flashthinking.py  gpt4o.py  gpt4ovision.py  gpto1.py  gpto1preview.py  metaculus4o.py  perplexity.py
forecasting_tools/util/: async_batching.py  coda_utils.py  custom_logger.py  file_manipulation.py  jsonable.py  misc.py
front_end/: Home.py
front_end/app_pages/: base_rate_page.py  benchmark_page.py  estimator_page.py  forecaster_page.py  key_factors_page.py  niche_list_researcher_page.py
front_end/benchmarks/: 2024-08-30_17-22-42__research_format_update__score_0.0802.json
front_end/example_outputs/: base_rate_page_examples.json  estimator_page_examples.json  forecast_page_examples.json  key_factors_page_examples.json  niche_list_page_examples.json
front_end/helpers/: app_page.py  custom_auth.py  report_displayer.py  tool_page.py
scripts/: benchmark_forecast_bot.py  benchmark_template_bot.py  example.py  gather_saved_reports.py  run_forecasts_for_ai_tournament.py  run_forecasts_for_ai_tournament_2.py  run_gemini_bot.py  run_gemini_comparison.py  run_key_factors_on_tournamanet.py  show_saved_report_app.py  simulate_a_tournament.ipynb  test_gemini_models.py
scripts/examples/: benchmark_forecast_bot.py  run_forecasts_for_ai_tournament_2.py  run_gemini_bot.py  run_gemini_comparison.py  test_gemini_models.py
(+75 files in other folders)
